MealSuggestion jwt fix
